Added ini file sections to all of the PHP settings so that they will correctly overwrite existing settings.

--- a/php/puppet/php.yaml
+++ b/php/puppet/php.yaml
@@ -13,15 +13,15 @@ php::fpm::service::ensure: stopped
 
 # PHP Configuration
 php::settings:
-  max_execution_time: 600
-  error_reporting: E_ALL
-  memory_limit: 1024M
-  post_max_size: 500M
-  register_globals: Off
-  upload_max_filesize: 500M
-  max_input_vars: 9999
-  log_errors: 1
-  error_log: /var/log/php-error.log
+  PHP/max_execution_time: 600
+  PHP/error_reporting: E_ALL
+  PHP/memory_limit: 1024M
+  PHP/post_max_size: 500M
+  PHP/register_globals: Off
+  PHP/upload_max_filesize: 500M
+  PHP/max_input_vars: 9999
+  PHP/log_errors: 1
+  PHP/error_log: /var/log/php-error.log
 
 # PHP Extensions
 php::extensions:
