--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -12,8 +12,12 @@ RUN /puppet-apply \
   --modulepath=./modules \
   ./site.pp
 
+# Fix error_log parameter in php5-fpm.conf because puppet-php won't do it
+# (see php::fpm::config::error_log in php/puppet/php.yaml)
+RUN sed -i 's:^error_log.*:error_log = /proc/self/fd/2:' /etc/php5/fpm/php-fpm.conf
+
 # Fix comments in xhprof.ini
-RUN sed -i 's/^#/;/' /etc/php5/mods-available/xhprof.ini
+RUN sed -i 's:^#:;:' /etc/php5/mods-available/xhprof.ini
 
 # Enable upload progress in apcu
 RUN echo apc.rfc1867 = 1 >> /etc/php5/mods-available/apcu.ini
