--- a/php/puppet/php.yaml
+++ b/php/puppet/php.yaml
@@ -3,8 +3,7 @@ classes:
   - php
 
 # FPM global configuration
-php::fpm::config:
-    error_log: /proc/self/fd/2
+::php::fpm::config::error_log: /proc/self/fd/2
 
 # FPM pool configuration
 php::fpm::pools:
