--- a/php/Dockerfile
+++ b/php/Dockerfile
@@ -1,6 +1,6 @@
 # lamp stack built with puppet
 
-FROM puppet
+FROM braucher/puppet
 MAINTAINER Jeff Braucher <jeff@braucher.net>
 
 # Configure the system with puppet
@@ -16,15 +16,11 @@ RUN /puppet-apply \
 # (see php::fpm::config::error_log in php/puppet/php.yaml)
 RUN sed -i 's:^error_log.*:error_log = /proc/self/fd/2:' /etc/php5/fpm/php-fpm.conf
 
-# Fix comments in xhprof.ini
+# Fix comments in xhprof.ini to suppress deprecation warnings
 RUN sed -i 's:^#:;:' /etc/php5/mods-available/xhprof.ini
 
 # Enable upload progress in apcu
 RUN echo apc.rfc1867 = 1 >> /etc/php5/mods-available/apcu.ini
-
-# Ensure php5-fpm won't run via upstart
-RUN echo 'manual' > /etc/init/php5-fpm.override
-RUN service php5-fpm stop
 
 # Script to fix uids on host volumes
 COPY ./fix-uids /fix-uids
