Parametrized so that forks of this repository don\'t need to change this code.

--- a/php-web/Dockerfile
+++ b/php-web/Dockerfile
@@ -2,11 +2,13 @@
 
 FROM httpd:2.4
 MAINTAINER Jeff Braucher <jeff@braucher.net>
+ARG app=php
 
 # Install some tools
 RUN apt-get update && apt-get install -y vim less
 
 # Setup apache
+RUN echo "Define app ${app}" >> /usr/local/apache2/conf/httpd.conf
 RUN echo "Include conf/php5-fpm.conf" >> /usr/local/apache2/conf/httpd.conf
 COPY ./php5-fpm.conf /usr/local/apache2/conf/
 
