--- a/php-web/php5-fpm.conf
+++ b/php-web/php5-fpm.conf
@@ -16,7 +16,7 @@ DocumentRoot /var/www/php
 
 # Enable fcgi proxy via handler
 <FilesMatch "\.php$">
-  SetHandler "proxy:fcgi://php:9000"
+  SetHandler "proxy:fcgi://${app}:9000"
 </FilesMatch>
 
 # Disable the server signature (embedded in server pages)
