--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,38 +1,23 @@
 php:
-  image: ${app}
+  image: "${app}"
   ports:
-    - "9000:9000"
-  links:
-    - ${app}-db
+    - '9000:9000'
   volumes:
-    - ./volumes/php:/var/www/php:ro
+    - './volumes/app:/var/www/app:ro'
   environment:
-    APP_VERSION: 'latest'
-    APP_LOCALE: 'en_us'
-    APP_TITLE: "${app}"
-    APP_ADMIN_USER: 'admin'
-    APP_ADMIN_EMAIL: 'admin@example.com'
-    APP_ADMIN_PASSWORD: 'admin'
-    APP_URL: "http://${ip}"
-    APP_DB_HOST: "${app}-db"
-    APP_DB_NAME: "${app}"
-    APP_DB_USER: "${app}"
-    APP_DB_PASSWORD: "password4${app}"
-php-db:
-  image: mysql:5.6
-  volumes:
-    - /var/lib/mysql
-  environment:
-    MYSQL_ROOT_PASSWORD: "root_66_${app}"
-    MYSQL_DATABASE: "${app}"
-    MYSQL_USER: "${app}"
-    MYSQL_PASSWORD: "password4${app}"
-php-web:
-  image: ${app}-web
+    DOCUMENT_ROOT: '/var/www/app'
+php-fcgi:
+  image: 'braucher/fcgi'
   ports:
     - '80:80'
     - '443:443'
   links:
-    - ${app}
+    - "${app}"
   volumes:
-    - ./volumes/php:/var/www/php:ro
+    - './volumes/app:/var/www/app:ro'
+  environment:
+    DOCUMENT_ROOT: '/var/www/app'
+    PROXY_TARGET: "${app}:9000"
+    DIRECTORY_INDEX: 'index.php'
+    FILES_MATCH: '\.php$$'
+
