--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,24 @@ php:
   image: "${app}"
   ports:
     - '9000:9000'
+  links:
+    - "${app}-db"
   volumes:
-    - './volumes/app:/var/www/app:ro'
+    - './volumes/app:/var/www/app'
+    - './volumes/export:/export'
+  command: "${command}"
   environment:
     DOCUMENT_ROOT: '/var/www/app'
-php-fcgi:
+php-db:
+  image: 'mysql:5.6'
+  volumes:
+    - '/var/lib/mysql'
+  environment:
+    MYSQL_ROOT_PASSWORD: "root_66_${app}"
+    MYSQL_DATABASE: "${app}"
+    MYSQL_USER: "${app}"
+    MYSQL_PASSWORD: "password4${app}"
+php-web:
   image: 'braucher/fcgi'
   ports:
     - '80:80'
@@ -16,8 +29,8 @@ php-fcgi:
   volumes:
     - './volumes/app:/var/www/app:ro'
   environment:
-    DOCUMENT_ROOT: '/var/www/app'
     PROXY_TARGET: "${app}:9000"
+    DOCUMENT_ROOT: '/var/www/app'
     DIRECTORY_INDEX: 'index.php'
     FILES_MATCH: '\.php$$'
 
