--- a/app/app.env
+++ b/app/app.env
@@ -9,3 +9,9 @@ export php_user=${PHP_USER:-www-data}
 # where to serve php files from
 export php_home=${DOCUMENT_ROOT:-/var/www/php}
 
+# database host to wait for
+export db_host=${DB_HOST:localhost}
+
+# backup filename
+date=`date '+%Y%m%d%M%S'`
+export backup=${BACKUP_FILE:-/export/backup-${date}.tar.gz}
