--- a/app/puppet/app.yaml
+++ b/app/puppet/app.yaml
@@ -2,6 +2,9 @@
 classes:
   - php
 
+# Install PHP 5.6
+php::repo::ubuntu::ppa: "ondrej/php5-5.6"
+
 # FPM global configuration
 php::fpm::config::error_log: /proc/self/fd/2
 
@@ -45,7 +48,6 @@ php::extensions:
   mysqlnd: {}
   curl: {}
   apcu: {}
-  xhprof: {}
   mcrypt: {}
   intl: {}
   xsl: {}
