--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ php:
     - './volumes/export:/export'
   command: "${command}"
   environment:
+    DB_HOST: "${app}-db"
     DOCUMENT_ROOT: '/var/www/app'
 php-db:
   image: 'mysql:5.6'
@@ -28,6 +29,7 @@ php-web:
     - "${app}"
   volumes:
     - './volumes/app:/var/www/app:ro'
+    - './volumes/export:/export'
   environment:
     PROXY_TARGET: "${app}:9000"
     DOCUMENT_ROOT: '/var/www/app'
