Changed to using latest image from Docker hub

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,29 +1,9 @@
 # lamp stack built with puppet
 
-FROM braucher/puppet
+FROM braucher/php
 MAINTAINER Jeff Braucher <jeff@braucher.net>
 
-# Configure the system with puppet
-COPY ./puppet/ /puppet/
-WORKDIR /puppet
-RUN librarian-puppet install
-RUN /puppet-apply \
-  --hiera_config=./hiera.yaml \
-  --modulepath=./modules \
-  ./site.pp
-
-# Fix error_log parameter in php5-fpm.conf because puppet-php won't do it
-# (see php::fpm::config::error_log in php/puppet/php.yaml)
-RUN sed -i 's:^error_log.*:error_log = /proc/self/fd/2:' /etc/php5/fpm/php-fpm.conf
-
-# Enable upload progress in apcu
-RUN echo apc.rfc1867 = 1 >> /etc/php5/mods-available/apcu.ini
-
-# Script to fix uids on host volumes
-COPY ./fix-uids /fix-uids
-
-# Run php
-EXPOSE 9000
+# Run app
 COPY ./app* /
 ENTRYPOINT ["/app"]
 CMD ["start"]
