--- a/app/app.env
+++ b/app/app.env
@@ -28,4 +28,4 @@ export title="${APP_TITLE:-app}"
 
 # backup filename
 date=`date '+%Y%m%d%M%S'`
-export backup=${BACKUP_FILE:-/export/backup-${date}.tar.gz}
+export backup=${BACKUP_FILE:-/export/wordpress-backup-${date}.tar.gz}
