Fix hour in backup name

--- a/app/app.env
+++ b/app/app.env
@@ -25,5 +25,5 @@ export db_user="${APP_DB_USER:-app}"
 export db_pass="${APP_DB_PASSWORD:-app}"
 
 # backups
-date=`date '+%Y%m%d%M%S'`
+date=`date '+%Y%m%d%H%M%S'`
 export backup=${BACKUP_FILE:-/export/app-backup-${date}.tar.gz}
