--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,7 +38,7 @@ app-web:
   links:
     - "${app}"
   volumes:
-    - './volumes/app:/var/www/app:ro'
+    - './volumes/app:/var/www/app'
   environment:
     PROXY_TARGET: "${app}:9000"
     DOCUMENT_ROOT: '/var/www/app'
