--- a/app/app.env
+++ b/app/app.env
@@ -14,7 +14,7 @@ export admin_pass="${APP_ADMIN_PASSWORD:-app}"
 export admin_email="${APP_ADMIN_EMAIL:-app@example.com}"
 export version="${APP_VERSION:-latest}"
 export locale="${APP_LOCALE:-en_US}"
-export currency="${APP_CURRENCY:-EUR}"
+export currency="${APP_CURRENCY:-USD}"
 export timezone="${APP_TIMEZONE:-MST7MDT}"
 export title="${APP_TITLE:-app}"
 
@@ -26,4 +26,6 @@ export db_pass="${APP_DB_PASSWORD:-app}"
 
 # backups
 date=`date '+%Y%m%d%H%M%S'`
-export backup=${BACKUP_FILE:-/export/app-backup-${date}.tar.gz}
+export backup_filetype=${BACKUP_FILETYPE:-zip}
+export backup=${BACKUP_FILE:-/export/app-backup-${date}.${backup_filetype}
+export restore=${RESTORE_FILE:-/export/app-backup-latest.${backup_filetype}
