Fixed backup/restore vars.

--- a/app/app.env
+++ b/app/app.env
@@ -27,5 +27,5 @@ export db_pass="${APP_DB_PASSWORD:-app}"
 # backups
 date=`date '+%Y%m%d%H%M%S'`
 export backup_filetype=${BACKUP_FILETYPE:-zip}
-export backup=${BACKUP_FILE:-/export/app-backup-${date}.${backup_filetype}
-export restore=${RESTORE_FILE:-/export/app-backup-latest.${backup_filetype}
+export backup=${BACKUP_FILE:-/export/app-backup-${date}.${backup_filetype}}
+export restore=${RESTORE_FILE:-/export/app-backup-latest.${backup_filetype}}
