Fixed app.start and fix-uds.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -3,6 +3,7 @@
 FROM braucher/puppet
 MAINTAINER Jeff Braucher <jeff@braucher.net>
 
+COPY ./fix-uids /
 COPY ./app* /
 ENTRYPOINT ["/app"]
 CMD ["start"]
