--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -5,6 +5,8 @@ MAINTAINER Jeff Braucher <jeff@braucher.net>
 
 COPY ./fix-uids /
 COPY ./app* /
+
+EXPOSE 9000
 ENTRYPOINT ["/app"]
 CMD ["start"]
 
