Sample project using braucher/wordpress.

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,20 +1,7 @@
 # docker base image based on Ubuntu
 
-FROM braucher/php
+FROM braucher/wordpress
 MAINTAINER Jeff Braucher <jeff@braucher.net>
-
-# Install Wordpress
-RUN apt-get update && \
-  apt-get install -y --force-yes \
-  wordpress postfix unzip
-
-# Install wp-cli
-RUN composer create-project wp-cli/wp-cli /opt/wp-cli --no-dev
-RUN chmod a+x /opt/wp-cli/bin/wp
-RUN ln -s /opt/wp-cli/bin/wp /usr/bin/wp
-
-# Set alias for wp-cli for the root user
-RUN echo alias \'wp=sudo -u www-data wp\' >> ~/.bashrc
 
 # Wordpress install and startup script
 COPY ./app* /
