Improved backup/restore process.

--- a/app/app.env
+++ b/app/app.env
@@ -8,6 +8,7 @@ export app_user="${APP_USER:-www-data}"
 export app_home="${APP_HOME:-/var/www/app}"
 
 # app
+export app="${APP:-app}"
 export app_url="${APP_URL:-http://www.example.com}"
 export admin_user="${APP_ADMIN_USER:-app}"
 export admin_pass="${APP_ADMIN_PASSWORD:-app}"
@@ -27,5 +28,5 @@ export db_pass="${APP_DB_PASSWORD:-app}"
 # backups
 date=`date '+%Y%m%d%H%M%S'`
 export backup_filetype=${BACKUP_FILETYPE:-zip}
-export backup=${BACKUP_FILE:-/export/app-backup-${date}.${backup_filetype}}
-export restore=${RESTORE_FILE:-/export/app-backup-latest.${backup_filetype}}
+export backup=${BACKUP_FILE:-/export/${app}-backup-${date}.${backup_filetype}}
+export restore=${RESTORE_FILE:-/export/${app}-backup-latest.${backup_filetype}}
