--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,6 +9,7 @@ app:
     - './volumes/export:/export'
   command: "${command}"
   environment:
+    APP: "${app}"
     APP_HOME: '/var/www/app'
     APP_VERSION: 'latest'
     APP_LOCALE: 'en_US'
